# ros2_ws_minimal

./: GPIO_for_differential_Tb6612fng.md  GPIO_for_differential_drive.md  README.md
robot_legion_teleop_python/: GPIO_for_differential_Tb6612_DUAL.md  GPIO_for_mecanum_Tb6612_DUAL.md  INTEGRATION_GUIDE.md
robot_legion_teleop_python/launch/: robot_bringup.launch.py
robot_legion_teleop_python/robot_legion_teleop_python/: teleop_legion_key.py  unit_executor_action_server.py
robot_legion_teleop_python/robot_legion_teleop_python/webui/: styles.css
src/fleet_orchestrator_core/: package.xml  setup.cfg  setup.py
src/fleet_orchestrator_core/config/: playbook_catalog.yaml
src/fleet_orchestrator_core/fleet_orchestrator_core/: audit_logger_node.py  intent_gateway_node.py  intent_translator_node.py  unit_emulator_node.py
src/fleet_orchestrator_core/launch/: sprint1_demo.launch.py  sprint1_full_stack.launch.py
src/fleet_orchestrator_demo_adapter_cmdvel/: package.xml  setup.cfg  setup.py
src/fleet_orchestrator_demo_adapter_cmdvel/fleet_orchestrator_demo_adapter_cmdvel/: cmdvel_adapter_node.py
src/fleet_orchestrator_hmi/: package.xml  setup.cfg  setup.py
src/fleet_orchestrator_hmi/web/: app.js  index.html  roslib.min.js
src/fleet_orchestrator_interfaces/: CMakeLists.txt  package.xml
src/fleet_orchestrator_interfaces/action/: ExecutePlaybook.action
src/fleet_orchestrator_schemas/: package.xml  setup.cfg  setup.py
src/fleet_orchestrator_schemas/examples/: example_playbook_command.json  example_universal_intent.json
src/fleet_orchestrator_schemas/schemas/: universal_intent.schema.json
src/robot_legion_teleop_python/: CMakeLists.txt  GPIO_for_differential_L298N.md  GPIO_for_differential_Tb6612.md  GPIO_for_differential_Tb6612_DUAL.md  GPIO_for_mecanum.md  GPIO_for_mecanum_Tb6612_DUAL.md  INTEGRATION_GUIDE.md  README.md  package.xml  playbook_terminal_execution_instructions.md  setup.py
src/robot_legion_teleop_python/config/: robot_profiles.yaml
src/robot_legion_teleop_python/config/presets/: fleet_preset_move_objective_3robots.json  (+2 more)
src/robot_legion_teleop_python/launch/: robot_bringup.launch.py  robot_minimal.launch.py
src/robot_legion_teleop_python/robot_legion_teleop_python/: __init__.py  control_lock_manager.py  drive_profiles.py  emiliobot_camera_node.py  fpv_camera_mux.py  hardware_interface.py  heartbeat_node.py  legion_camera_node.py  motor_driver_node.py  playbook_contract.py  playbook_helpers.py  playbook_strategies.py  teleop_legion_key.py  terminal_orchestrator.py  unit_executor_action_server.py  usb_camera_node.py
src/robot_legion_teleop_python/test/: test_playbook_validation.py
(+3 files in other folders)
