<?xml version="1.0"?>
<!-- SPDX-License-Identifier: LicenseRef-Proprietary -->
<package format="3">
  <name>fleet_orchestrator_core</name>
  <version>0.1.0</version>
  <description>Core ROS 2 nodes for fleet-level intent translation and audit.</description>

  <maintainer email="emilio@vitruvian.systems">fleet_orchestrator</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
